# PixelOE

./: .gitignore  LICENSE  README.md  __init__.py  demo-torch.py  demo-weighted-kmeans.py  demo.py  pyproject.toml  requirements-gradio.txt  requirements-standalone.txt  requirements.txt  setup.py
.github/workflows/: publish.yml
client/: client.css  config.toml  demo-gr.py  intro.md
nodes/: installer.py  pixel.py
pixeloe/: __init__.py  cli.py  color.py  outline.py  pixelize.py  utils.py
pixeloe/downscale/: __init__.py  center.py  contrast_based.py  conventional.py  k_centroid.py
pixeloe/torch/: __init__.py
src/pixeloe/: cli.py  cli_legacy.py  color.py  logger.py  pixelize.py  utils.py
src/pixeloe/downscale/: __init__.py  contrast_based.py  conventional.py
src/pixeloe/legacy/: color.py  outline.py  pixelize.py  utils.py
src/pixeloe/legacy/downscale/: center.py  contrast_based.py  conventional.py  k_centroid.py
src/pixeloe/torch/: color.py  env.py  minmax.py  outline.py  pixelize.py  utils.py
src/pixeloe/torch/downscale/: contrast_based.py  k_centroid.py  lanczos.py
src/pixeloe/torch/sharpen/: laplacian.py  unsharp.py
