[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixeloe"
version = "0.1.4"
description = "Detail-Oriented Pixelization based on Contrast-Aware Outline Expansion."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Shih-Ying Yeh(KohakuBlueLeaf)", email = "apolloyeh0123@gmail.com"},
]
dependencies = [
    "opencv-python",
    "numpy",
    "pillow",
    "torch",
    "kornia",
]

[project.urls]
Homepage = "https://github.com/KohakuBlueleaf/PixelOE"

[project.scripts]
"pixeloe.pixelize" = "pixeloe.cli:pixelize"
"pixeloe.outline" = "pixeloe.cli:outline"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]