[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixeloe"
version = "0.1.5"
description = "Detail-Oriented Pixelization based on Contrast-Aware Outline Expansion."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Shih-Ying Yeh(KohakuBlueLeaf)", email = "apolloyeh0123@gmail.com"},
]
dependencies = [
    "opencv-python",
    "numpy",
    "pillow",
    "torch",
    "torchvision",
    "kornia",
]

[project.optional-dependencies]
gradio = [
    "gradio>=4.0.0",
    "toml",
]
standalone = [
    "gradio>=4.0.0",
    "toml",
    "pywebview",
]
all = [
    "gradio>=4.0.0",
    "toml",
    "pywebview",
]

[project.urls]
Homepage = "https://github.com/KohakuBlueleaf/PixelOE"
Repository = "https://github.com/KohakuBlueleaf/PixelOE"

[project.scripts]
"pixeloe.pixelize" = "pixeloe.cli_legacy:pixelize"
"pixeloe.outline" = "pixeloe.cli_legacy:outline"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kblueleaf"
DisplayName = "PixelOE"
Icon = "https://kblueleaf.net/_astro/pixeloe-icon.vlyukbYz.jpg"